@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-06-18T08:11:19Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -2, +3 ],
+  "count" : 4,
+  "count_minmax" : [ 4, 4 ],
+  "count_decinc" : [ -0, +4 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
