@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-06-17T08:17:23Z",
+  "timestamp" : "2022-06-18T08:11:19Z",
   "count_outdated" : 404,
   "uniques_outdated" : 23,
-  "count" : 417,
-  "uniques" : 28,
+  "count" : 419,
+  "uniques" : 29,
   "views" : [
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
@@ -37,6 +37,13 @@
       "timestamp": "2022-06-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-18T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
