@@ -1,10 +1,10 @@
 {
-  "count": 13,
+  "count": 15,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 3,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -25,6 +25,11 @@
     {
       "timestamp": "2022-06-17T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-18T00:00:00Z",
+      "count": 4,
       "uniques": 1
     }
   ]
