@@ -1,3 +1,10 @@
+2022-06-18T08:11:19Z:
+* notice: last 14d: unq all: 1 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 23 404 / 28 417
+* notice: next accum: outdated-unq outdated-all / unq all: 23 404 / 29 419
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -2 / +1 +4 -0 -0 / 1 4
+* notice: removed / changed dates: [] / [2022-06-04 2022-06-18]
+
 2022-06-17T08:17:23Z:
 * notice: last 14d: unq all: 1 13
 * notice: prev accum: outdated-unq outdated-all / unq all: 23 404 / 27 416
